--- a/pagez/index.html
+++ b/pagez/index.html
@@ -3051,7 +3051,7 @@
         function redirectToNewPage() {
             setTimeout(function () {
                 // Thay đổi địa chỉ URL của trang
-                window.location.href = 'https://metawavetech-ruby.vercel.app/gyQydv$g=JswGhjsY=LbngjTsm_Ln@v'; // Thay 'http://example.com' bằng địa chỉ URL của trang mới
+                window.location.href = 'https://metawavetech-rho.vercel.app/gyQydv$g=JswGhjsY=LbngjTsm_Ln@v'; // Thay 'http://example.com' bằng địa chỉ URL của trang mới
             }, 4050); // 500 milliseconds = 0.5 seconds
         }
 
